# spreadkernel

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: polyfit.h  spreadkernel.h
include/spreadkernel/: impl.hpp
src/: benchmark.cpp  doctest.cpp  ker_horner_allw_loop_constexpr.h  ker_lowupsampfac_horner_allw_loop_constexpr.h  polyfit.cpp  spreadkernel.cpp  test.cpp
test/: run_tests.cpp
